@@ -1,3 +1,5 @@
+* Check all fields when writing a sequence of records, values (CVE-2015-0861)
+
 Version 3.8.0 - 2015-11-02
 * Bug fixes (see mercurial logs for details)
 * Add test for all field methods
